Saved poster API changes
